--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2000,3 +2000,89 @@ h6,
   text-align: left;
   font-size: 15px;
 }
+
+
+
+
+#header3-7e .mbr-section-title,
+#header3-7e .mbr-section-subtitle {
+  text-align: center;
+}
+#ext_menu-76 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-76 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-76 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-76 .close-icon::before,
+#ext_menu-76 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-76 .link,
+#ext_menu-76 .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-76 .link {
+  font-size: 1.05rem;
+}
+#ext_menu-76 .dropdown-item,
+#ext_menu-76 .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-76 .link:hover,
+#ext_menu-76 .dropdown-item:hover,
+#ext_menu-76 .link:focus,
+#ext_menu-76 .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-76 .link[aria-expanded="true"],
+#ext_menu-76 .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-76 .nav-dropdown-sm .link:focus,
+#ext_menu-76 .nav-dropdown-sm .link:hover,
+#ext_menu-76 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-76 .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-76 .navbar,
+#ext_menu-76 .nav-dropdown-sm,
+#ext_menu-76 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-76 .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-76 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-76 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-76 .bg-color.transparent.opened .link:hover,
+#ext_menu-76 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-76 .link[aria-expanded="true"],
+#ext_menu-76 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#footer1-77 P {
+  color: #c0a375;
+  text-align: center;
+  font-family: 'Bitter', serif;
+  font-size: 12px;
+}
+#msg-box5-7d H3 {
+  font-size: 18px;
+  text-align: left;
+  font-family: 'Merriweather', serif;
+}
+#msg-box5-7d P {
+  font-size: 13px;
+  font-family: 'Merriweather', serif;
+  text-align: left;
+}
