--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2203,3 +2203,90 @@ h6,
   font-family: 'Bitter', serif;
   font-size: 12px;
 }
+
+
+
+#ext_menu-7o .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-7o .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-7o .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-7o .close-icon::before,
+#ext_menu-7o .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-7o .link,
+#ext_menu-7o .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-7o .link {
+  font-size: 1.05rem;
+}
+#ext_menu-7o .dropdown-item,
+#ext_menu-7o .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-7o .link:hover,
+#ext_menu-7o .dropdown-item:hover,
+#ext_menu-7o .link:focus,
+#ext_menu-7o .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-7o .link[aria-expanded="true"],
+#ext_menu-7o .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-7o .nav-dropdown-sm .link:focus,
+#ext_menu-7o .nav-dropdown-sm .link:hover,
+#ext_menu-7o .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-7o .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-7o .navbar,
+#ext_menu-7o .nav-dropdown-sm,
+#ext_menu-7o .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-7o .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-7o .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-7o .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-7o .bg-color.transparent.opened .link:hover,
+#ext_menu-7o .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-7o .link[aria-expanded="true"],
+#ext_menu-7o .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#footer1-7p P {
+  color: #c0a375;
+  text-align: center;
+  font-family: 'Bitter', serif;
+  font-size: 12px;
+}
+#header3-7q .mbr-section-title,
+#header3-7q .mbr-section-subtitle {
+  text-align: center;
+}
+#content1-7r DIV {
+  text-align: left;
+  font-size: 12px;
+}
+#content2-7s SPAN {
+  font-size: 12px;
+  font-family: 'Raleway', sans-serif;
+}
+#content2-7s P {
+  text-align: left;
+  font-size: 12px;
+}
