--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5,8 +5,8 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i);
 
@@ -509,8 +509,6 @@ h6,
 
 
 
-
-
 #header3-5z .mbr-section-title,
 #header3-5z .mbr-section-subtitle {
   text-align: center;
@@ -577,37 +575,27 @@ h6,
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
-#header3-5u .mbr-section-title,
-#header3-5u .mbr-section-subtitle {
+#header3-7w .mbr-section-title,
+#header3-7w .mbr-section-subtitle {
   text-align: center;
 }
-#header3-5u .mbr-section-title {
-  text-align: center;
-  font-family: 'Lora', serif;
-  font-size: 25px;
-}
-#header3-5u .mbr-section-title SPAN {
-  font-family: 'Merriweather', serif;
-}
-#header3-5u .mbr-section-subtitle {
-  font-family: 'Slabo 27px', serif;
-  text-align: center;
-}
-#header3-5u .mbr-section-subtitle SPAN {
-  color: #8c8c8c;
-}
-#header6-5r .mbr-section-title {
-  color: #28262b;
-}
-#header6-5r .mbr-section-text {
-  color: #000000;
-  font-size: 14px;
+#header3-7w .mbr-section-title {
+  font-size: 30px;
 }
 #footer1-4z P {
   color: #c0a375;
   text-align: center;
   font-family: 'Bitter', serif;
   font-size: 12px;
+}
+#content2-7v SPAN {
+  font-family: 'Slabo 27px', serif;
+}
+#content2-7v DIV {
+  text-align: left;
+}
+#content1-7x P {
+  text-align: center;
 }
 
 #header3-3j .mbr-section-title,
