--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1020,7 +1020,7 @@ h6,
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
+  color: #ffffff!important;
 }
 #header3-2n .mbr-section-title,
 #header3-2n .mbr-section-subtitle {
@@ -1767,7 +1767,7 @@ h6,
 }
 #ext_menu-64 .link[aria-expanded="true"],
 #ext_menu-64 .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
+  color: #ffffff!important;
 }
 #content1-65 P {
   color: #f28281;
@@ -2287,4 +2287,67 @@ h6,
 #content2-7s P {
   text-align: left;
   font-size: 12px;
+}
+
+#ext_menu-80 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-80 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-80 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-80 .close-icon::before,
+#ext_menu-80 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-80 .link,
+#ext_menu-80 .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-80 .link {
+  font-size: 1.05rem;
+}
+#ext_menu-80 .dropdown-item,
+#ext_menu-80 .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-80 .link:hover,
+#ext_menu-80 .dropdown-item:hover,
+#ext_menu-80 .link:focus,
+#ext_menu-80 .dropdown-item:focus {
+  color: #ffffff;
+}
+#ext_menu-80 .link[aria-expanded="true"],
+#ext_menu-80 .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-80 .nav-dropdown-sm .link:focus,
+#ext_menu-80 .nav-dropdown-sm .link:hover,
+#ext_menu-80 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-80 .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-80 .navbar,
+#ext_menu-80 .nav-dropdown-sm,
+#ext_menu-80 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-80 .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-80 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-80 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-80 .bg-color.transparent.opened .link:hover,
+#ext_menu-80 .bg-color.transparent.opened .link:focus {
+  color: #ffffff;
+}
+#ext_menu-80 .link[aria-expanded="true"],
+#ext_menu-80 .dropdown-item[aria-expanded="true"] {
+  color: #ffffff!important;
 }
