--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -105,16 +105,16 @@ h6,
   background-color: #ffffff !important;
 }
 .bg-success {
-  background-color: #00a885 !important;
+  background-color: #a38f84 !important;
 }
 .bg-info {
   background-color: #f1aaa7 !important;
 }
 .bg-warning {
-  background-color: #f7da64 !important;
+  background-color: #7e9b9f !important;
 }
 .bg-danger {
-  background-color: #3d8eb9 !important;
+  background-color: #28324e !important;
 }
 .btn-primary {
   background-color: #ffffff;
@@ -177,8 +177,8 @@ h6,
   border-color: #e76a65 !important;
 }
 .btn-success {
-  background-color: #00a885;
-  border-color: #00a885;
+  background-color: #a38f84;
+  border-color: #a38f84;
   color: #ffffff;
 }
 .btn-success:hover,
@@ -187,18 +187,18 @@ h6,
 .btn-success:active,
 .btn-success.active {
   color: #ffffff;
-  background-color: #005c48;
-  border-color: #005c48;
+  background-color: #7d695d;
+  border-color: #7d695d;
 }
 .btn-success.disabled,
 .btn-success:disabled {
   color: #ffffff !important;
-  background-color: #005c48 !important;
-  border-color: #005c48 !important;
+  background-color: #7d695d !important;
+  border-color: #7d695d !important;
 }
 .btn-warning {
-  background-color: #f7da64;
-  border-color: #f7da64;
+  background-color: #7e9b9f;
+  border-color: #7e9b9f;
   color: #ffffff;
 }
 .btn-warning:hover,
@@ -207,18 +207,18 @@ h6,
 .btn-warning:active,
 .btn-warning.active {
   color: #ffffff;
-  background-color: #f3c91b;
-  border-color: #f3c91b;
+  background-color: #597478;
+  border-color: #597478;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
   color: #ffffff !important;
-  background-color: #f3c91b !important;
-  border-color: #f3c91b !important;
+  background-color: #597478 !important;
+  border-color: #597478 !important;
 }
 .btn-danger {
-  background-color: #3d8eb9;
-  border-color: #3d8eb9;
+  background-color: #28324e;
+  border-color: #28324e;
   color: #ffffff;
 }
 .btn-danger:hover,
@@ -227,14 +227,14 @@ h6,
 .btn-danger:active,
 .btn-danger.active {
   color: #ffffff;
-  background-color: #2a627f;
-  border-color: #2a627f;
+  background-color: #0e121b;
+  border-color: #0e121b;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #2a627f !important;
-  border-color: #2a627f !important;
+  background-color: #0e121b !important;
+  border-color: #0e121b !important;
 }
 .btn-primary-outline {
   background: none;
@@ -298,8 +298,8 @@ h6,
 }
 .btn-success-outline {
   background: none;
-  border-color: #004234;
-  color: #004234;
+  border-color: #6e5c53;
+  color: #6e5c53;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
@@ -307,19 +307,19 @@ h6,
 .btn-success-outline:active,
 .btn-success-outline.active {
   color: #ffffff;
-  background-color: #00a885;
-  border-color: #00a885;
+  background-color: #a38f84;
+  border-color: #a38f84;
 }
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
   color: #ffffff !important;
-  background-color: #00a885 !important;
-  border-color: #00a885 !important;
+  background-color: #a38f84 !important;
+  border-color: #a38f84 !important;
 }
 .btn-warning-outline {
   background: none;
-  border-color: #e9bd0c;
-  color: #e9bd0c;
+  border-color: #4e6669;
+  color: #4e6669;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
@@ -327,19 +327,19 @@ h6,
 .btn-warning-outline:active,
 .btn-warning-outline.active {
   color: #ffffff;
-  background-color: #f7da64;
-  border-color: #f7da64;
+  background-color: #7e9b9f;
+  border-color: #7e9b9f;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
   color: #ffffff !important;
-  background-color: #f7da64 !important;
-  border-color: #f7da64 !important;
+  background-color: #7e9b9f !important;
+  border-color: #7e9b9f !important;
 }
 .btn-danger-outline {
   background: none;
-  border-color: #24536c;
-  color: #24536c;
+  border-color: #05070b;
+  color: #05070b;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
@@ -347,41 +347,41 @@ h6,
 .btn-danger-outline:active,
 .btn-danger-outline.active {
   color: #ffffff;
-  background-color: #3d8eb9;
-  border-color: #3d8eb9;
+  background-color: #28324e;
+  border-color: #28324e;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #3d8eb9 !important;
-  border-color: #3d8eb9 !important;
+  background-color: #28324e !important;
+  border-color: #28324e !important;
 }
 .text-primary {
   color: #ffffff !important;
 }
 .text-success {
-  color: #00a885 !important;
+  color: #a38f84 !important;
 }
 .text-info {
   color: #f1aaa7 !important;
 }
 .text-warning {
-  color: #f7da64 !important;
+  color: #7e9b9f !important;
 }
 .text-danger {
-  color: #3d8eb9 !important;
+  color: #28324e !important;
 }
 .alert-success {
-  background-color: #00a885;
+  background-color: #a38f84;
 }
 .alert-info {
   background-color: #f1aaa7;
 }
 .alert-warning {
-  background-color: #f7da64;
+  background-color: #7e9b9f;
 }
 .alert-danger {
-  background-color: #3d8eb9;
+  background-color: #28324e;
 }
 .btn-social {
   border-color: #ffffff;
@@ -417,7 +417,7 @@ h6,
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
-  color: #28ffd2;
+  color: #dad1cd;
 }
 .mbr-plan-header.bg-info .mbr-plan-subtitle,
 .mbr-plan-header.bg-info .mbr-plan-price-desc {
@@ -425,11 +425,11 @@ h6,
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #c7d4d5;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #98c5dd;
+  color: #94a1c8;
 }
 .mbr-small-footer a,
 .mbr-gallery-filter li:hover {
