--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2486,7 +2486,7 @@ h6,
 }
 #msg-box5-8g H3 {
   color: #c0a375;
-  text-align: left;
+  text-align: center;
   font-family: 'Arimo', sans-serif;
   font-size: 20px;
 }
