--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -70,12 +70,6 @@ h6,
 .mbr-footer .mbr-contacts strong {
   font-family: 'Montserrat', sans-serif;
 }
-.btn {
-  border-radius: 1.6em;
-}
-.mbr-subscribe .btn {
-  border-radius: 1.6em !important;
-}
 .btn-sm,
 .lead a,
 .lead blockquote,
@@ -102,7 +96,7 @@ h6,
   font-style: normal;
 }
 .bg-primary {
-  background-color: #ffffff !important;
+  background-color: #000000 !important;
 }
 .bg-success {
   background-color: #a38f84 !important;
@@ -117,8 +111,8 @@ h6,
   background-color: #28324e !important;
 }
 .btn-primary {
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: #000000;
+  border-color: #000000;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -127,14 +121,14 @@ h6,
 .btn-primary:active,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #d4d4d4;
-  border-color: #d4d4d4;
+  background-color: #000000;
+  border-color: #000000;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #d4d4d4 !important;
-  border-color: #d4d4d4 !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
 }
 .btn-secondary {
   background-color: #cccccc;
@@ -238,8 +232,8 @@ h6,
 }
 .btn-primary-outline {
   background: none;
-  border-color: #ffffff;
-  color: #ffffff;
+  border-color: #000000;
+  color: #000000;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
@@ -247,14 +241,14 @@ h6,
 .btn-primary-outline:active,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: #000000;
+  border-color: #000000;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #ffffff !important;
-  border-color: #ffffff !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
 }
 .btn-secondary-outline {
   background: none;
@@ -357,7 +351,7 @@ h6,
   border-color: #28324e !important;
 }
 .text-primary {
-  color: #ffffff !important;
+  color: #000000 !important;
 }
 .text-success {
   color: #a38f84 !important;
@@ -384,36 +378,36 @@ h6,
   background-color: #28324e;
 }
 .btn-social {
-  border-color: #ffffff;
+  border-color: #000000;
 }
 .btn-social:hover {
-  background: #ffffff;
+  background: #000000;
 }
 .mbr-company .list-group-item.active .list-group-text {
-  color: #ffffff;
+  color: #000000;
 }
 .mbr-footer p a,
 .mbr-footer ul a {
-  color: #ffffff;
+  color: #000000;
 }
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #ffffff;
+  background: #000000;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #ffffff;
+  color: #000000;
 }
 .lead a,
 .lead a:hover {
-  color: #ffffff;
+  color: #000000;
 }
 .lead blockquote {
-  border-color: #ffffff;
+  border-color: #000000;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #b3b3b3;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -433,7 +427,7 @@ h6,
 }
 .mbr-small-footer a,
 .mbr-gallery-filter li:hover {
-  color: #ffffff;
+  color: #000000;
 }
 .scrollToTop_wraper {
   opacity: 0 !important;
@@ -572,7 +566,7 @@ h6,
 #ext_menu-5a .dropdown-item:hover,
 #ext_menu-5a .link:focus,
 #ext_menu-5a .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-menu {
@@ -599,7 +593,7 @@ h6,
 }
 #ext_menu-5a .bg-color.transparent.opened .link:hover,
 #ext_menu-5a .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
@@ -669,7 +663,7 @@ h6,
 #ext_menu-3a .dropdown-item:hover,
 #ext_menu-3a .link:focus,
 #ext_menu-3a .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-3a .link[aria-expanded="true"],
 #ext_menu-3a .dropdown-menu {
@@ -696,7 +690,7 @@ h6,
 }
 #ext_menu-3a .bg-color.transparent.opened .link:hover,
 #ext_menu-3a .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-3a .link[aria-expanded="true"],
 #ext_menu-3a .dropdown-item[aria-expanded="true"] {
@@ -806,8 +800,8 @@ h6,
   color: #bcbcbc;
 }
 #features7-22 .iconbox {
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: #000000;
+  border-color: #000000;
 }
 #features7-22 H4 {
   font-family: 'Bitter', serif;
@@ -1029,7 +1023,7 @@ h6,
 #ext_menu-5a .dropdown-item:hover,
 #ext_menu-5a .link:focus,
 #ext_menu-5a .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-menu {
@@ -1056,7 +1050,7 @@ h6,
 }
 #ext_menu-5a .bg-color.transparent.opened .link:hover,
 #ext_menu-5a .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
@@ -1125,7 +1119,7 @@ h6,
 #ext_menu-3a .dropdown-item:hover,
 #ext_menu-3a .link:focus,
 #ext_menu-3a .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-3a .link[aria-expanded="true"],
 #ext_menu-3a .dropdown-menu {
@@ -1152,7 +1146,7 @@ h6,
 }
 #ext_menu-3a .bg-color.transparent.opened .link:hover,
 #ext_menu-3a .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-3a .link[aria-expanded="true"],
 #ext_menu-3a .dropdown-item[aria-expanded="true"] {
@@ -1247,7 +1241,7 @@ h6,
 #ext_menu-3q .dropdown-item:hover,
 #ext_menu-3q .link:focus,
 #ext_menu-3q .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-3q .link[aria-expanded="true"],
 #ext_menu-3q .dropdown-menu {
@@ -1274,7 +1268,7 @@ h6,
 }
 #ext_menu-3q .bg-color.transparent.opened .link:hover,
 #ext_menu-3q .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-3q .link[aria-expanded="true"],
 #ext_menu-3q .dropdown-item[aria-expanded="true"] {
@@ -1372,7 +1366,7 @@ h6,
 #ext_menu-48 .dropdown-item:hover,
 #ext_menu-48 .link:focus,
 #ext_menu-48 .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-48 .link[aria-expanded="true"],
 #ext_menu-48 .dropdown-menu {
@@ -1399,7 +1393,7 @@ h6,
 }
 #ext_menu-48 .bg-color.transparent.opened .link:hover,
 #ext_menu-48 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-48 .link[aria-expanded="true"],
 #ext_menu-48 .dropdown-item[aria-expanded="true"] {
@@ -1499,7 +1493,7 @@ h6,
 #ext_menu-4p .dropdown-item:hover,
 #ext_menu-4p .link:focus,
 #ext_menu-4p .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-4p .link[aria-expanded="true"],
 #ext_menu-4p .dropdown-menu {
@@ -1526,7 +1520,7 @@ h6,
 }
 #ext_menu-4p .bg-color.transparent.opened .link:hover,
 #ext_menu-4p .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-4p .link[aria-expanded="true"],
 #ext_menu-4p .dropdown-item[aria-expanded="true"] {
@@ -1613,7 +1607,7 @@ h6,
 #ext_menu-5a .dropdown-item:hover,
 #ext_menu-5a .link:focus,
 #ext_menu-5a .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-menu {
@@ -1640,7 +1634,7 @@ h6,
 }
 #ext_menu-5a .bg-color.transparent.opened .link:hover,
 #ext_menu-5a .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-5a .link[aria-expanded="true"],
 #ext_menu-5a .dropdown-item[aria-expanded="true"] {
@@ -1776,7 +1770,7 @@ h6,
 #ext_menu-64 .dropdown-item:hover,
 #ext_menu-64 .link:focus,
 #ext_menu-64 .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-64 .link[aria-expanded="true"],
 #ext_menu-64 .dropdown-menu {
@@ -1803,7 +1797,7 @@ h6,
 }
 #ext_menu-64 .bg-color.transparent.opened .link:hover,
 #ext_menu-64 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-64 .link[aria-expanded="true"],
 #ext_menu-64 .dropdown-item[aria-expanded="true"] {
@@ -1888,7 +1882,7 @@ h6,
 #ext_menu-64 .dropdown-item:hover,
 #ext_menu-64 .link:focus,
 #ext_menu-64 .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-64 .link[aria-expanded="true"],
 #ext_menu-64 .dropdown-menu {
@@ -1915,7 +1909,7 @@ h6,
 }
 #ext_menu-64 .bg-color.transparent.opened .link:hover,
 #ext_menu-64 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-64 .link[aria-expanded="true"],
 #ext_menu-64 .dropdown-item[aria-expanded="true"] {
@@ -1951,7 +1945,7 @@ h6,
 #ext_menu-6m .dropdown-item:hover,
 #ext_menu-6m .link:focus,
 #ext_menu-6m .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-6m .link[aria-expanded="true"],
 #ext_menu-6m .dropdown-menu {
@@ -1978,7 +1972,7 @@ h6,
 }
 #ext_menu-6m .bg-color.transparent.opened .link:hover,
 #ext_menu-6m .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-6m .link[aria-expanded="true"],
 #ext_menu-6m .dropdown-item[aria-expanded="true"] {
@@ -2075,7 +2069,7 @@ h6,
 #ext_menu-76 .dropdown-item:hover,
 #ext_menu-76 .link:focus,
 #ext_menu-76 .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-76 .link[aria-expanded="true"],
 #ext_menu-76 .dropdown-menu {
@@ -2102,7 +2096,7 @@ h6,
 }
 #ext_menu-76 .bg-color.transparent.opened .link:hover,
 #ext_menu-76 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-76 .link[aria-expanded="true"],
 #ext_menu-76 .dropdown-item[aria-expanded="true"] {
@@ -2159,7 +2153,7 @@ h6,
 #ext_menu-7f .dropdown-item:hover,
 #ext_menu-7f .link:focus,
 #ext_menu-7f .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-7f .link[aria-expanded="true"],
 #ext_menu-7f .dropdown-menu {
@@ -2186,7 +2180,7 @@ h6,
 }
 #ext_menu-7f .bg-color.transparent.opened .link:hover,
 #ext_menu-7f .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-7f .link[aria-expanded="true"],
 #ext_menu-7f .dropdown-item[aria-expanded="true"] {
@@ -2273,7 +2267,7 @@ h6,
 #ext_menu-7o .dropdown-item:hover,
 #ext_menu-7o .link:focus,
 #ext_menu-7o .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-7o .link[aria-expanded="true"],
 #ext_menu-7o .dropdown-menu {
@@ -2300,7 +2294,7 @@ h6,
 }
 #ext_menu-7o .bg-color.transparent.opened .link:hover,
 #ext_menu-7o .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-7o .link[aria-expanded="true"],
 #ext_menu-7o .dropdown-item[aria-expanded="true"] {
@@ -2358,7 +2352,7 @@ h6,
 #ext_menu-80 .dropdown-item:hover,
 #ext_menu-80 .link:focus,
 #ext_menu-80 .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-80 .link[aria-expanded="true"],
 #ext_menu-80 .dropdown-menu {
@@ -2385,7 +2379,7 @@ h6,
 }
 #ext_menu-80 .bg-color.transparent.opened .link:hover,
 #ext_menu-80 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-80 .link[aria-expanded="true"],
 #ext_menu-80 .dropdown-item[aria-expanded="true"] {
@@ -2427,7 +2421,7 @@ h6,
 #ext_menu-87 .dropdown-item:hover,
 #ext_menu-87 .link:focus,
 #ext_menu-87 .dropdown-item:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-87 .link[aria-expanded="true"],
 #ext_menu-87 .dropdown-menu {
@@ -2454,7 +2448,7 @@ h6,
 }
 #ext_menu-87 .bg-color.transparent.opened .link:hover,
 #ext_menu-87 .bg-color.transparent.opened .link:focus {
-  color: #ffffff;
+  color: #000000;
 }
 #ext_menu-87 .link[aria-expanded="true"],
 #ext_menu-87 .dropdown-item[aria-expanded="true"] {
